Corrected Spelling in Chart Title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .attr("text-anchor", "middle")
         .style("font-size", "14px")
         .style("text-decoration", "underline")
-        .text("Homeruns vs Weigth");
+        .text("Homeruns vs Weight");
 
 
       // Add Lengend Title
