--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       y1.title = "Batting Average";
       y1.tickFormat = ".3f";
 
+      // Change colors
       myChart1.assignColor("Left", "black");
       myChart1.assignColor("Right", "grey");
       myChart1.assignColor("Both", "grey");
@@ -67,6 +68,7 @@
       y.title = "Homeruns";
 
 
+      // Change colors
       myChart2.assignColor("Left", "black");
       myChart2.assignColor("Right", "grey");
       myChart2.assignColor("Both", "grey");
